# Lab4_CPP

./: CMakeLists.txt
src/: generator.cpp  generator.h  main.cpp  struct.cpp  struct.h  threads.h  timing.h
