cmake_minimum_required(VERSION 3.10)
if (MSVC)
    add_compile_options(/W3)
    add_compile_options(/std:c++20)
    add_compile_options(/EHsc)
else()
    add_compile_options(-Wall)
    add_compile_options(-std=c++20)
    add_compile_options(-fexceptions)

endif()

add_executable(my_program src/main.cpp src/struct.cpp)